--- a/app/templates/user/stats.hbs
+++ b/app/templates/user/stats.hbs
@@ -332,7 +332,7 @@
 			</th>
 		{{/each}}
 		<th colspan="3" class="percent">
-			{{round completion.rate}}&nbsp;%
+			{{round (mult 100 completion.rate)}}&nbsp;%
 		</th>
 	</tr>
 </table>
