Deck import: user deck

--- a/app/templates/decks.hbs
+++ b/app/templates/decks.hbs
@@ -20,18 +20,28 @@ Importer un deck
 	URL : {{input value=deck.url}}
 	<br/><br/>
 
-	Groupe : <select onchange={{action "setDeckgroup" value="target.value"}}>
+	Utilisateur : <select onchange={{action "setUser" value="target.value"}}>
+		<option value=-1></option>
+		{{#each model.users as |user|}}
+			<option value={{user.id}}>{{user.name}}</option>
+		{{/each}}
+	</select>
+	<br/><br/>
+
+	ou groupe de decks : <select onchange={{action "setDeckgroup" value="target.value"}}>
+		<option value=-1></option>
 		{{#each model.deckgroups as |deckgroup|}}
 			<option value={{deckgroup.id}}>{{deckgroup.name}} ({{deckgroup.cardset.name_fr}})</option>
 		{{/each}}
 	</select>
 	<br/><br/>
 
-	ou créer un groupe : {{input value=deckgroup.name}}
+	ou créer un groupe de decks : {{input value=deckgroup.name}}
 	<br/>
 	URL : {{input value=deckgroup.url}}
 	<br/>
 	Extension : <select onchange={{action "setCardset" value="target.value"}}>
+		<option value=-1></option>
 		{{#each model.cardsets as |cardset|}}
 			<option value={{cardset.id}}>{{cardset.name_fr}}</option>
 		{{/each}}
