--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -8,6 +8,9 @@ body {
 	margin-bottom: 5px;
 	margin-right: 20px;
 }
+.navigation .session {
+	float: right;
+}
 .navigation a {
 	margin-right: 10px;
 }
