--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,5 +1,5 @@
 <form {{action 'authenticate' on='submit'}}>
-	{{input id='identification' placeholder='Login' value=identification}}
+	{{input id='login' placeholder='Login' value=login}}
 	{{input id='password' placeholder='Mot de passe' type='password' value=password}}
 	<button type="submit">Connexion</button>
 	{{#if errorMessage}}
