Authentication: use currentUser and drop user.id in routes

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,4 @@
-<hr/>
+<!--hr/>
 
 <div id="users">
 	{{#each model as |user|}}
@@ -26,4 +26,4 @@
 		</select>
 	</p>
 	<button {{action "save"}}>Enregistrer</button>
-</div>
+</div-->
