--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -1,17 +1,15 @@
 <div class="navigation">
-	<img src={{concat "https://robohash.org/" model.name ".png?size=42x42"}} class="user-avatar"/>
+	<span class="user-name">{{user.name}}</span>
 
-	<span class="user-name">{{model.name}}</span>
-
-	{{#link-to 'user.collection' model.id title="Collection"}}
+	{{#link-to 'user.collection' title="Collection"}}
 		<i class="fas fa-th pointer fa-2x"></i>
 	{{/link-to}}
 
-	{{#link-to 'user.deckgroups' model.id (query-params cardset=latest) title="Decks"}}
+	{{#link-to 'user.deckgroups' (query-params cardset=latest) title="Decks"}}
 		<i class="fas fa-layer-group pointer fa-2x"></i>
 	{{/link-to}}
 
-	{{#link-to 'user.stats' model.id title="Stats"}}
+	{{#link-to 'user.stats' title="Stats"}}
 		<i class="fas fa-percent pointer fa-2x"></i>
 	{{/link-to}}
 </div>
