--- a/app/templates/user/stats.hbs
+++ b/app/templates/user/stats.hbs
@@ -29,7 +29,7 @@
 				{{#if (or (not standard) set.standard)}}
 					{{#if (get (get (get (get completion.cardsets set.id) "rarities") rarity.id) "total")}}
 						<td class="stat">
-							{{#link-to 'user.collection' model.user.id (query-params cardset=set.id rarity=rarity.id own='wanted')}}
+							{{#link-to 'user.collection' (query-params cardset=set.id rarity=rarity.id own='wanted')}}
 								{{get (get (get (get completion.cardsets set.id) "rarities") rarity.id) "wanted"}}
 							{{/link-to}}
 						</td>
@@ -39,7 +39,7 @@
 				{{/if}}
 			{{/each}}
 			<th class="stat">
-				{{#link-to 'user.collection' model.user.id (query-params rarity=rarity.id own='wanted')}}
+				{{#link-to 'user.collection' (query-params rarity=rarity.id own='wanted')}}
 					{{get (get completion.rarities rarity.id) "wanted"}}
 				{{/link-to}}
 			</th>
@@ -51,14 +51,14 @@
 		{{#each model.cardsets as |set|}}
 			{{#if (or (not standard) set.standard)}}
 				<th class="stat">
-					{{#link-to 'user.collection' model.user.id (query-params cardset=set.id own='wanted')}}
+					{{#link-to 'user.collection' (query-params cardset=set.id own='wanted')}}
 						{{get (get completion.cardsets set.id) "wanted"}}
 					{{/link-to}}
 				</th>
 			{{/if}}
 		{{/each}}
 		<th class="stat">
-			{{#link-to 'user.collection' model.user.id (query-params own='wanted')}}
+			{{#link-to 'user.collection' (query-params own='wanted')}}
 				{{completion.wanted}}
 			{{/link-to}}
 		</th>
@@ -151,7 +151,7 @@
 				{{#if (or (not standard) set.standard)}}
 					{{#if (get (get (get (get completion.cardsets set.id) "rarities") rarity.id) "total")}}
 						<td class="stat1">
-							{{#link-to 'user.collection' model.user.id (query-params cardset=set.id rarity=rarity.id own='missing')}}
+							{{#link-to 'user.collection' (query-params cardset=set.id rarity=rarity.id own='missing')}}
 								{{get (get (get (get completion.cardsets set.id) "rarities") rarity.id) "owned"}}
 							{{/link-to}}
 						</td>
@@ -167,7 +167,7 @@
 				{{/if}}
 			{{/each}}
 			<th class="stat1">
-				{{#link-to 'user.collection' model.user.id (query-params rarity=rarity.id own='missing')}}
+				{{#link-to 'user.collection' (query-params rarity=rarity.id own='missing')}}
 					{{get (get completion.rarities rarity.id) "owned"}}
 				{{/link-to}}
 			</th>
@@ -184,7 +184,7 @@
 		{{#each model.cardsets as |set|}}
 			{{#if (or (not standard) set.standard)}}
 				<th class="stat1">
-					{{#link-to 'user.collection' model.user.id (query-params cardset=set.id own='missing')}}
+					{{#link-to 'user.collection' (query-params cardset=set.id own='missing')}}
 						{{get (get completion.cardsets set.id) "owned"}}
 					{{/link-to}}
 				</th>
@@ -193,7 +193,7 @@
 			{{/if}}
 		{{/each}}
 		<th class="stat1">
-			{{#link-to 'user.collection' model.user.id (query-params own='missing')}}
+			{{#link-to 'user.collection' (query-params own='missing')}}
 				{{completion.owned}}
 			{{/link-to}}
 		</th>
@@ -280,7 +280,7 @@
 			<th>{{rarity.name_fr}}</th>
 			{{#each model.cardclasses as |cardclass|}}
 				<td class="stat1">
-					{{#link-to 'user.collection' model.user.id (query-params class=cardclass.id rarity=rarity.id own='missing')}}
+					{{#link-to 'user.collection' (query-params class=cardclass.id rarity=rarity.id own='missing')}}
 						{{get (get (get (get completion.cardclasses cardclass.id) "rarities") rarity.id) "owned"}}
 					{{/link-to}}
 				</td>
@@ -292,7 +292,7 @@
 				</td>
 			{{/each}}
 			<th class="stat1">
-				{{#link-to 'user.collection' model.user.id (query-params rarity=rarity.id own='missing')}}
+				{{#link-to 'user.collection' (query-params rarity=rarity.id own='missing')}}
 					{{get (get completion.rarities rarity.id) "owned"}}
 				{{/link-to}}
 			</th>
@@ -308,7 +308,7 @@
 		<th>TOTAL</th>
 		{{#each model.cardclasses as |cardclass|}}
 			<th class="stat1">
-				{{#link-to 'user.collection' model.user.id (query-params class=cardclass.id own='missing')}}
+				{{#link-to 'user.collection' (query-params class=cardclass.id own='missing')}}
 					{{get (get completion.cardclasses cardclass.id) "owned"}}
 				{{/link-to}}
 			</th>
@@ -316,7 +316,7 @@
 			<th class="stat3">{{get (get completion.cardclasses cardclass.id) "total"}}</th>
 		{{/each}}
 		<th class="stat1">
-			{{#link-to 'user.collection' model.user.id (query-params own='missing')}}
+			{{#link-to 'user.collection' (query-params own='missing')}}
 				{{completion.owned}}
 			{{/link-to}}
 		</th>
@@ -369,7 +369,7 @@
 				{{#if (or (not standard) set.standard)}}
 					{{#if (get (get (get (get total.cardsets set.id) "rarities") rarity.id) "total")}}
 						<td class="stat1">
-							{{#link-to 'user.collection' model.user.id (query-params cardset=set.id rarity=rarity.id own='missing')}}
+							{{#link-to 'user.collection' (query-params cardset=set.id rarity=rarity.id own='missing')}}
 								{{get (get (get (get total.cardsets set.id) "rarities") rarity.id) "owned"}}
 							{{/link-to}}
 						</td>
@@ -385,7 +385,7 @@
 				{{/if}}
 			{{/each}}
 			<th class="stat1">
-				{{#link-to 'user.collection' model.user.id (query-params rarity=rarity.id own='missing')}}
+				{{#link-to 'user.collection' (query-params rarity=rarity.id own='missing')}}
 					{{get (get total.rarities rarity.id) "owned"}}
 				{{/link-to}}
 			</th>
@@ -402,7 +402,7 @@
 		{{#each model.cardsets as |set|}}
 			{{#if (or (not standard) set.standard)}}
 				<th class="stat1">
-					{{#link-to 'user.collection' model.user.id (query-params cardset=set.id own='missing')}}
+					{{#link-to 'user.collection' (query-params cardset=set.id own='missing')}}
 						{{get (get total.cardsets set.id) "owned"}}
 					{{/link-to}}
 				</th>
@@ -411,7 +411,7 @@
 			{{/if}}
 		{{/each}}
 		<th class="stat1">
-			{{#link-to 'user.collection' model.user.id own='missing'}}
+			{{#link-to 'user.collection' own='missing'}}
 				{{total.owned}}
 			{{/link-to}}
 		</th>
@@ -455,7 +455,7 @@
 			<th>{{rarity.name_fr}}</th>
 			{{#each model.cardclasses as |cardclass|}}
 				<td class="stat1">
-					{{#link-to 'user.collection' model.user.id (query-params class=cardclass.id rarity=rarity.id own='missing')}}
+					{{#link-to 'user.collection' (query-params class=cardclass.id rarity=rarity.id own='missing')}}
 						{{get (get (get (get total.cardclasses cardclass.id) "rarities") rarity.id) "owned"}}
 					{{/link-to}}
 				</td>
@@ -467,7 +467,7 @@
 				</td>
 			{{/each}}
 			<th class="stat1">
-				{{#link-to 'user.collection' model.user.id (query-params rarity=rarity.id own='missing')}}
+				{{#link-to 'user.collection' (query-params rarity=rarity.id own='missing')}}
 					{{get (get total.rarities rarity.id) "owned"}}
 				{{/link-to}}
 			</th>
@@ -483,7 +483,7 @@
 		<th>TOTAL</th>
 		{{#each model.cardclasses as |cardclass|}}
 			<th class="stat1">
-				{{#link-to 'user.collection' model.user.id (query-params class=cardclass.id own='missing')}}
+				{{#link-to 'user.collection' (query-params class=cardclass.id own='missing')}}
 					{{get (get total.cardclasses cardclass.id) "owned"}}
 				{{/link-to}}
 			</th>
@@ -491,7 +491,7 @@
 			<th class="stat3">{{get (get total.cardclasses cardclass.id) "total"}}</th>
 		{{/each}}
 		<th class="stat1">
-			{{#link-to 'user.collection' model.user.id (query-params own='missing')}}
+			{{#link-to 'user.collection' (query-params own='missing')}}
 				{{total.owned}}
 			{{/link-to}}
 		</th>
@@ -529,12 +529,12 @@
 				<tr>
 					<th>{{rarity.name_fr}}</th>
 					<td class="stat">
-						{{#link-to 'user.collection' model.user.id (query-params rarity=rarity.id own='extra')}}
+						{{#link-to 'user.collection' (query-params rarity=rarity.id own='extra')}}
 							{{get model.stat.extrahs.normal.rarities rarity.id}}
 						{{/link-to}}
 					</td>
 					<td class="stat">
-						{{#link-to 'user.collection' model.user.id (query-params rarity=rarity.id own='extra')}}
+						{{#link-to 'user.collection' (query-params rarity=rarity.id own='extra')}}
 							{{get model.stat.extrahs.golden.rarities rarity.id}}
 						{{/link-to}}
 					</td>
@@ -548,12 +548,12 @@
 		<tr>
 			<th>TOTAL</th>
 			<th class="stat">
-				{{#link-to 'user.collection' model.user.id (query-params own='extra')}}
+				{{#link-to 'user.collection' (query-params own='extra')}}
 					{{model.stat.extrahs.normal.total}}
 				{{/link-to}}
 			</th>
 			<th class="stat">
-				{{#link-to 'user.collection' model.user.id (query-params own='extra')}}
+				{{#link-to 'user.collection' (query-params own='extra')}}
 					{{model.stat.extrahs.golden.total}}
 				{{/link-to}}
 			</th>
@@ -577,12 +577,12 @@
 				<tr>
 					<th>{{rarity.name_fr}}</th>
 					<td class="stat">
-						{{#link-to 'user.collection' model.user.id (query-params rarity=rarity.id own='extra')}}
+						{{#link-to 'user.collection' (query-params rarity=rarity.id own='extra')}}
 							{{get model.stat.extra.normal.rarities rarity.id}}
 						{{/link-to}}
 					</td>
 					<td class="stat">
-						{{#link-to 'user.collection' model.user.id (query-params rarity=rarity.id own='extra')}}
+						{{#link-to 'user.collection' (query-params rarity=rarity.id own='extra')}}
 							{{get model.stat.extra.golden.rarities rarity.id}}
 						{{/link-to}}
 					</td>
@@ -596,12 +596,12 @@
 		<tr>
 			<th>TOTAL</th>
 			<th class="stat">
-				{{#link-to 'user.collection' model.user.id (query-params own='extra')}}
+				{{#link-to 'user.collection' (query-params own='extra')}}
 					{{model.stat.extra.normal.total}}
 				{{/link-to}}
 			</th>
 			<th class="stat">
-				{{#link-to 'user.collection' model.user.id (query-params own='extra')}}
+				{{#link-to 'user.collection' (query-params own='extra')}}
 					{{model.stat.extra.golden.total}}
 				{{/link-to}}
 			</th>
