--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -1,4 +1,10 @@
 <div class="navigation">
+	<div class="session">
+		{{#link-to 'user.profile' title="Profil"}}
+			<i class="fas fa-user pointer fa-2x"></i>
+		{{/link-to}}
+	</div>
+
 	{{#link-to 'user.collection' title="Collection"}}
 		<i class="fas fa-th pointer fa-2x"></i>
 	{{/link-to}}
