User collection: no pity counters for basic set

--- a/app/templates/user/collection.hbs
+++ b/app/templates/user/collection.hbs
@@ -64,7 +64,7 @@
 	{{/each}}
 </div>
 
-{{#if cardset}}
+{{#if (and cardset (not-eq cardset '2'))}}
 	{{#if (eq pitycounters.length 0)}}
 		<div>
 			Initialiser les pity counters pour cette extension ?
