--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -5,7 +5,6 @@ body {
 
 .navigation {
 	display: inline;
-	margin-bottom: 5px;
 	margin-right: 20px;
 }
 .navigation .session {
@@ -179,6 +178,8 @@ table {
 }
 th, td {
 	border: 1px solid black;
+	/* Fix for Firefox https://bugzilla.mozilla.org/show_bug.cgi?id=688556 */
+	background-clip: padding-box;
 }
 .noborder {
 	border: none;
@@ -292,6 +293,9 @@ th.cardclass, th.cardclass a {
 	background-color: white;
 }
 .decks td.owned {
+	background-color: lightgray;
+}
+.decks td.cardset-Basique {
 	background-color: lightgray;
 }
 .decks td.cardset-Classique {
