--- a/app/templates/user/deck.hbs
+++ b/app/templates/user/deck.hbs
@@ -57,7 +57,7 @@
 			{{/with}}
 			<br/>
 			{{#with (filter (action "filterOwned") model.deck.deckstats) as |deckstats|}}
-				{{deckstats.firstObject.win}} <span class="pointer" {{action "addWin"}}>victoires</span>, {{deckstats.firstObject.loose}} <span class="pointer" {{action "addLoose"}}>défaites</span>
+				{{deckstats.firstObject.win}} <span class="pointer" {{action "addWin"}}>victoire{{if (gt deckstats.firstObject.win 1) "s"}}</span>, {{deckstats.firstObject.loose}} <span class="pointer" {{action "addLoose"}}>défaite{{if (gt deckstats.firstObject.win 1) "s"}}</span>
 			{{else}}
 				0 <span class="pointer" {{action "addWin"}}>victoires</span>, 0 <span class="pointer" {{action "addLoose"}}>défaites</span>
 			{{/with}}
