--- a/app/templates/user.hbs
+++ b/app/templates/user.hbs
@@ -13,6 +13,11 @@
 		<i class="fas fa-layer-group pointer fa-2x"></i>
 	{{/link-to}}
 
+	{{#link-to 'user.import' class="fa-stack fa-1x" title="Importer un deck"}}
+		<i class="fas fa-layer-group fa-stack-2x"></i>
+		<i class="fas fa-long-arrow-alt-down fa-stack-2x" style="color: green;"></i>
+	{{/link-to}}
+
 	{{#link-to 'user.stats' title="Stats"}}
 		<i class="fas fa-percent pointer fa-2x"></i>
 	{{/link-to}}
