User import: allow full text

--- a/app/templates/user/import.hbs
+++ b/app/templates/user/import.hbs
@@ -2,7 +2,7 @@ Importer un deck
 
 <hr/>
 
-{{input value=importString}}
+{{textarea value=importString}}
 <button {{action "import"}}>Importer</button>
 
 <br/>
