--- a/app/templates/user/deck.hbs
+++ b/app/templates/user/deck.hbs
@@ -61,12 +61,24 @@
 			{{/if}}
 			<br/>
 			{{#with (filter (action "filterOwned") model.deck.deckstats) as |deckstats|}}
+				Non classé :
+				{{deckstats.firstObject.win_casual}} <span class="pointer" {{action 'addWinCasual'}}>victoire{{if (not-eq deckstats.firstObject.win_casual 1) "s"}}</span>,
+				{{deckstats.firstObject.loose_casual}} <span class="pointer" {{action 'addLooseCasual'}}>défaite{{if (not-eq deckstats.firstObject.loose_casual 1) "s"}}</span>
+				{{#if (gt (add deckstats.firstObject.win_casual deckstats.firstObject.loose_casual) 0)}}
+					: {{round (div (mult 100 deckstats.firstObject.win_casual) (add deckstats.firstObject.win_casual deckstats.firstObject.loose_casual))}} %
+				{{/if}}
+				<br/>
+				Classé :
 				{{deckstats.firstObject.win}} <span class="pointer" {{action 'addWin'}}>victoire{{if (not-eq deckstats.firstObject.win 1) "s"}}</span>,
-				{{deckstats.firstObject.loose}} <span class="pointer" {{action 'addLoose'}}>défaite{{if (not-eq deckstats.firstObject.loose 1) "s"}}</span> :
-				{{round (div (mult 100 deckstats.firstObject.win) (add deckstats.firstObject.win deckstats.firstObject.loose))}} %
+				{{deckstats.firstObject.loose}} <span class="pointer" {{action 'addLoose'}}>défaite{{if (not-eq deckstats.firstObject.loose 1) "s"}}</span>
+				{{#if (gt (add deckstats.firstObject.win deckstats.firstObject.loose) 0)}}
+					: {{round (div (mult 100 deckstats.firstObject.win) (add deckstats.firstObject.win deckstats.firstObject.loose))}} %
+				{{/if}}
 				<i class="fas fa-redo pointer" {{action 'resetWinrate' pitycounter}} title={{"Effacer les victoires et les défaites"}}></i>
 			{{else}}
-				0 <span class="pointer" {{action "addWin"}}>victoires</span>, 0 <span class="pointer" {{action "addLoose"}}>défaites</span>
+				Non classé : 0 <span class="pointer" {{action 'addWinCasual'}}>victoires</span>, 0 <span class="pointer" {{action 'addLooseCasual'}}>défaites</span>
+				<br/>
+				Classé : 0 <span class="pointer" {{action 'addWin'}}>victoires</span>, 0 <span class="pointer" {{action 'addLoose'}}>défaites</span>
 			{{/with}}
 		</h2>
 
