--- a/app/templates/user/deck.hbs
+++ b/app/templates/user/deck.hbs
@@ -62,15 +62,15 @@
 			<br/>
 			{{#with (filter (action "filterOwned") model.deck.deckstats) as |deckstats|}}
 				Non classé :
-				{{deckstats.firstObject.win_casual}} <span class="pointer" {{action 'addWinCasual'}}>victoire{{if (not-eq deckstats.firstObject.win_casual 1) "s"}}</span>,
-				{{deckstats.firstObject.loose_casual}} <span class="pointer" {{action 'addLooseCasual'}}>défaite{{if (not-eq deckstats.firstObject.loose_casual 1) "s"}}</span>
-				{{#if (gt (add deckstats.firstObject.win_casual deckstats.firstObject.loose_casual) 0)}}
-					: {{round (div (mult 100 deckstats.firstObject.win_casual) (add deckstats.firstObject.win_casual deckstats.firstObject.loose_casual))}} %
+				{{deckstats.firstObject.wincasual}} <span class="pointer" {{action 'addWinCasual'}}>victoire{{if (gt deckstats.firstObject.wincasual 1) "s"}}</span>,
+				{{deckstats.firstObject.loosecasual}} <span class="pointer" {{action 'addLooseCasual'}}>défaite{{if (gt deckstats.firstObject.loosecasual 1) "s"}}</span>
+				{{#if (gt (add deckstats.firstObject.wincasual deckstats.firstObject.loosecasual) 0)}}
+					: {{round (div (mult 100 deckstats.firstObject.wincasual) (add deckstats.firstObject.wincasual deckstats.firstObject.loosecasual))}} %
 				{{/if}}
 				<br/>
 				Classé :
-				{{deckstats.firstObject.win}} <span class="pointer" {{action 'addWin'}}>victoire{{if (not-eq deckstats.firstObject.win 1) "s"}}</span>,
-				{{deckstats.firstObject.loose}} <span class="pointer" {{action 'addLoose'}}>défaite{{if (not-eq deckstats.firstObject.loose 1) "s"}}</span>
+				{{deckstats.firstObject.win}} <span class="pointer" {{action 'addWin'}}>victoire{{if (gt deckstats.firstObject.win 1) "s"}}</span>,
+				{{deckstats.firstObject.loose}} <span class="pointer" {{action 'addLoose'}}>défaite{{if (gt deckstats.firstObject.loose 1) "s"}}</span>
 				{{#if (gt (add deckstats.firstObject.win deckstats.firstObject.loose) 0)}}
 					: {{round (div (mult 100 deckstats.firstObject.win) (add deckstats.firstObject.win deckstats.firstObject.loose))}} %
 				{{/if}}
