User deck: hide export string on editing

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,3 +1,4 @@
+Login.hbs
 <form {{action 'authenticate' on='submit'}}>
 	{{input id='login' placeholder='Login' value=login}}
 	{{input id='password' placeholder='Mot de passe' type='password' value=password}}
