--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,5 @@
 <hr/>
-
+index.hbs
 <form {{action 'authenticate' on='submit'}}>
 	{{input id='login' placeholder='Login' value=login}}
 	{{input id='password' placeholder='Mot de passe' type='password' value=password}}
