User deck: fix plural

--- a/app/templates/user/deck.hbs
+++ b/app/templates/user/deck.hbs
@@ -76,9 +76,9 @@
 				{{/if}}
 				<i class="fas fa-redo pointer" {{action 'resetWinrate' pitycounter}} title={{"Effacer les victoires et les défaites"}}></i>
 			{{else}}
-				Non classé : 0 <span class="pointer" {{action 'addWinCasual'}}>victoires</span>, 0 <span class="pointer" {{action 'addLooseCasual'}}>défaites</span>
+				Non classé : 0 <span class="pointer" {{action 'addWinCasual'}}>victoire</span>, 0 <span class="pointer" {{action 'addLooseCasual'}}>défaite</span>
 				<br/>
-				Classé : 0 <span class="pointer" {{action 'addWin'}}>victoires</span>, 0 <span class="pointer" {{action 'addLoose'}}>défaites</span>
+				Classé : 0 <span class="pointer" {{action 'addWin'}}>victoire</span>, 0 <span class="pointer" {{action 'addLoose'}}>défaite</span>
 			{{/with}}
 		</h2>
 
