User import: check existing decks for copies

--- a/app/templates/user/deck.hbs
+++ b/app/templates/user/deck.hbs
@@ -47,17 +47,15 @@
 				<i class="fas fa-edit pointer" title="Modifier" {{action "edit"}}></i>
 			{{/if}}
 			<i class="fas fa-clone pointer" title="Dupliquer" {{action "clone"}}></i>
-			{{#if (eq model.user.id model.deck.user.id)}}
-				<i class="fas fa-trash pointer" title="Supprimer" {{action "delete"}}></i>
-			{{/if}}
+			<i class="fas fa-trash pointer" title="Supprimer" {{action "delete"}}></i>
 			{{#with (filter (action "filterOwned") model.deck.wanteddecks) as |wanteddecks|}}
 				<i class="fas fa-heart pointer" style="color: red;" {{action "removeWanteddeck" wanteddecks.firstObject}}></i>
 			{{else}}
 				<i class="fas fa-heart faded pointer" style="color: red;" {{action "addWanteddeck" model.deck}}></i>
 			{{/with}}
-			<i class="fas fa-file-export pointer" title="Exporter" {{action "showExportString"}}></i>
-			{{#if showExportString}}
-				{{exportString}}
+			<i class="fas fa-file-export pointer" title="Exporter" {{action "showDeckstring"}}></i>
+			{{#if showDeckstring}}
+				{{model.deck.deckstring}}
 			{{/if}}
 			<br/>
 			{{#with (filter (action "filterOwned") model.deck.deckstats) as |deckstats|}}
