--- a/app/templates/user/import.hbs
+++ b/app/templates/user/import.hbs
@@ -15,6 +15,26 @@ Importer un deck
 		{{/each}}
 	</ul>
 
+	{{#if deck.deckcards.isFulfilled}}
+		{{#with (filter (action "filterDeckstring") model.decks) as |sameDecks|}}
+			<p style="color: darkred;">
+				Attention ! Ce deck est identique aux decks
+				<ul>
+				{{#each sameDecks as |sameDeck|}}
+					{{log "sameDeck" sameDeck sameDeck.cardclass sameDeck.name sameDeck.deckgroup sameDeck.user}}
+					<li>{{sameDeck.cardclass.name_fr}} {{sameDeck.name}}
+					{{#if sameDeck.deckgroup}}
+						du groupe {{sameDeck.deckgroup.name}}
+					{{/if}}
+					{{#if sameDeck.user}}
+						de l'utilisateur {{sameDeck.user.name}}
+					{{/if}}</li>
+				{{/each}}
+				</ul>
+			</p>
+		{{/with}}
+	{{/if}}
+
 	Nom : {{input value=deck.name}}
 	<br/>
 	URL : {{input value=deck.url}}
