User deckgroups: winrate placement

--- a/app/templates/user/deckgroups/index.hbs
+++ b/app/templates/user/deckgroups/index.hbs
@@ -36,6 +36,16 @@
 					{{#with (filter (action "filterCardclass" cardclass) deckgroup.decks) as |decks|}}
 						{{#with decks.firstObject as |deck|}}
 							<td style="background-color: hsl({{get (get deckstats deck.id) "color"}});">
+								{{#with (filter (action "filterOwned") deck.deckstats) as |deckstats|}}
+									<div style="float: right;">
+										{{#if (gt (add deckstats.firstObject.wincasual deckstats.firstObject.loosecasual) 0)}}
+											{{round (div (mult 100 deckstats.firstObject.wincasual) (add deckstats.firstObject.wincasual deckstats.firstObject.loosecasual))}} %
+										{{/if}}
+										{{#if (gt (add deckstats.firstObject.win deckstats.firstObject.loose) 0)}}
+											, {{round (div (mult 100 deckstats.firstObject.win) (add deckstats.firstObject.win deckstats.firstObject.loose))}} %
+										{{/if}}
+									</div>
+								{{/with}}
 								{{#link-to 'user.deck' deck.id}}
 									{{deck.name}}
 								{{/link-to}}
@@ -51,14 +61,6 @@
 										<i class="fas fa-heart faded pointer" style="color: red;" {{action "addWanteddeck" deck}}></i>
 									{{/with}}
 								{{/if}}
-								{{#with (filter (action "filterOwned") deck.deckstats) as |deckstats|}}
-									{{#if (gt (add deckstats.firstObject.wincasual deckstats.firstObject.loosecasual) 0)}}
-										{{round (div (mult 100 deckstats.firstObject.wincasual) (add deckstats.firstObject.wincasual deckstats.firstObject.loosecasual))}} %
-									{{/if}}
-									{{#if (gt (add deckstats.firstObject.win deckstats.firstObject.loose) 0)}}
-										, {{round (div (mult 100 deckstats.firstObject.win) (add deckstats.firstObject.win deckstats.firstObject.loose))}} %
-									{{/if}}
-								{{/with}}
 								<br/>
 								{{#if deck.size}}
 									{{get (get deckstats deck.id) "owned"}}/{{deck.size}}
@@ -92,6 +94,16 @@
 				{{#with (filter (action "filterCardclass" cardclass) model.decks) as |decks|}}
 					{{#each decks as |deck|}}
 						<td style="background-color: hsl({{get (get deckstats deck.id) "color"}});">
+							{{#with (filter (action "filterOwned") deck.deckstats) as |deckstats|}}
+								<div style="float: right;">
+									{{#if (gt (add deckstats.firstObject.wincasual deckstats.firstObject.loosecasual) 0)}}
+										{{round (div (mult 100 deckstats.firstObject.wincasual) (add deckstats.firstObject.wincasual deckstats.firstObject.loosecasual))}} %
+									{{/if}}
+									{{#if (gt (add deckstats.firstObject.win deckstats.firstObject.loose) 0)}}
+										, {{round (div (mult 100 deckstats.firstObject.win) (add deckstats.firstObject.win deckstats.firstObject.loose))}} %
+									{{/if}}
+								</div>
+							{{/with}}
 							{{#link-to 'user.deck' deck.id}}
 								{{deck.name}}
 							{{/link-to}}
@@ -107,14 +119,6 @@
 									<i class="fas fa-heart faded pointer" style="color: red;" {{action "addWanteddeck" deck}}></i>
 								{{/with}}
 							{{/if}}
-							{{#with (filter (action "filterOwned") deck.deckstats) as |deckstats|}}
-								{{#if (gt (add deckstats.firstObject.wincasual deckstats.firstObject.loosecasual) 0)}}
-									{{round (div (mult 100 deckstats.firstObject.wincasual) (add deckstats.firstObject.wincasual deckstats.firstObject.loosecasual))}} %
-								{{/if}}
-								{{#if (gt (add deckstats.firstObject.win deckstats.firstObject.loose) 0)}}
-									, {{round (div (mult 100 deckstats.firstObject.win) (add deckstats.firstObject.win deckstats.firstObject.loose))}} %
-								{{/if}}
-							{{/with}}
 							<br/>
 							{{#if deck.size}}
 								{{get (get deckstats deck.id) "owned"}}/{{deck.size}}
